--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -92,4 +92,8 @@
         color: $white;
         background-color: $brand-button;
     }
+
+    &--primary:hover {
+        background-color: $button-default-hover;
+    }
 }
