--- a/src/scss/layout/callback.scss
+++ b/src/scss/layout/callback.scss
@@ -149,6 +149,10 @@
     margin: 8px auto 0;
     max-width: 343px;
 
+    &:hover {
+        background-color: $button-default-hover;
+    }
+
     @include desktop() {
         margin: 32px 0 0;
         max-width: 178px;
