--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,5 +1,10 @@
 .header {
     background-color: $brand-bg;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .header__container {
@@ -19,12 +24,13 @@
 
 .header__menu-wrapper {
     @include mobile() {
-        position: absolute;
+        position: fixed;
         background-color: $white;
         right: 0;
         top: 0;
         width: 315px;
         height: 190px;
+        overflow-y: auto;
         padding: 16px 16px 32px;
         z-index: 1;
         transform: translateX(100%);
@@ -70,12 +76,65 @@
     }
 }
 
-.header__menu-item svg {
-    margin-left: 8px;
+.header__menu-link--with-submenu {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    svg {
+        margin-left: 8px;
+        transition: .6s;
+    }
+
+    &.header__menu-link--active {
+        svg {
+            transform: scale(1, -1)
+        }
+    }
 }
 
 .header__submenu {
     display: none;
+    margin: 8px 0 16px;
+
+    @include desktop() {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: $white;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+        border-radius: 8px;
+        padding: 20px;
+        z-index: 1;
+    }
+
+    &--visible {
+        display: block;
+
+        @include desktop() {
+            display: grid;
+        }
+
+    }
+
+}
+.header__submenu-item {
+    & + & {
+        margin-top: 8px;
+
+        @include desktop() {
+            margin-top: 0;
+        }
+    }
+}
+
+.header__submenu-link {
+    color: $text-light;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
 }
 
 .header__wrapper {
