--- a/src/scss/layout/prices.scss
+++ b/src/scss/layout/prices.scss
@@ -1,4 +1,4 @@
-.catalog {
+.prices {
     padding-top: 64px;
     padding-bottom: 64px;
 
@@ -8,57 +8,38 @@
     }
 }
 
-.catalog__list {
+.prices__list {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
     display: grid;
     gap: 9px;
-    grid-template-columns: repeat(auto-fill, minmax(167px, 1fr));
 
     @include desktop() {
         gap: 16px;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        font-size: 20px;
+        line-height: 26px;
     }
 }
 
-.catalog__item-link {
-    display: block;
+.prices__item {
+    display: flex;
+    justify-content: space-between;
     padding: 16px;
-    border-radius: 8px;
     border: 2px solid $blue;
-
-    &:hover {
-        background-color: $blue;
-
-        img {
-            transform: scale(1.1);
-        }
-    }
+    border-radius: 8px;
 
     @include desktop() {
-        border-radius: 16px;
+        gap: 10px;
     }
 }
 
-.catalog__item-img-wrapper {
-    width: 100%;
-    aspect-ratio: 135/100;
-
-    img {
-        transition: 0.6s;
-    }
+.prices__item-price {
+    font-weight: 600;
 }
 
-.catalog__item-name {
-    @include mobile-text;
-    color: $text-dark;
-    text-align: center;
-    margin-top: 16px;
-
-    @include desktop() {
-        @include desktop-h3;
-    }
-}
-
-.catalog__button {
+.prices__button {
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
