--- a/src/scss/layout/steps.scss
+++ b/src/scss/layout/steps.scss
@@ -39,6 +39,10 @@
     border-radius: 8px;
     counter-increment: steps;
 
+    &:hover {
+        background-color: $blue;
+    }
+
     & + & {
         margin-top: 16px;
     }
@@ -111,6 +115,10 @@
     width: 100%;
     margin-top: 16px;
     text-align: center;
+
+    &:hover {
+        background-color: $button-default-hover;
+    }
 
     @include desktop(){
         width: 317px;
