--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -63,3 +63,4 @@ $button-additional: #FCFCFF;
 $button-additional-hover: #EBEBF7;
 $brand-button: var(--brand-button, #014A97);
 $brand-bg: var(--brand-bg, #000B4C);
+$dark-bg: #000731;
