--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -75,6 +75,7 @@
     line-height: 18px;
     color: $text-dark;
     display: block;
+    width: 100%;
     padding: 16px;
     border-radius: 8px;
     background-color: $white;
