--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -11,17 +11,14 @@
 
 .form__form {
     @include desktop() {
-        width: 552px;
+        width: 784px;
+        margin: 0 auto;
     }
 }
 
 .form__title {
     margin-bottom: 16px;
     text-align: center;
-
-    @include desktop() {
-        text-align: left;
-    }
 }
 
 .form__text {
@@ -33,7 +30,6 @@
 
     @include desktop() {
         @include desktop-h3;
-        text-align: left;
         margin: 0 0 32px;
         max-width: 100%;
     }
@@ -50,16 +46,14 @@
         color: $white;
         display: table;
         margin: 8px auto 0;
-
-        @include desktop() {
-            margin: 8px 0 0;
-        }
     }
 }
 
 .form__input-block {
     @include desktop() {
         width: 402px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     &+& {
@@ -90,6 +84,10 @@
 .form__checkbox-block {
     margin-top: 8px;
     position: relative;
+    
+    @include desktop() {
+        text-align: center;
+    }
 }
 
 .form__checkbox-label {
@@ -143,7 +141,7 @@
     }
 
     @include desktop() {
-        margin: 32px 0 0;
+        margin: 32px auto 0;
         max-width: 178px;
     }
 }
