--- a/src/scss/layout/steps.scss
+++ b/src/scss/layout/steps.scss
@@ -34,7 +34,7 @@
 }
 
 .steps__item {
-    padding: 16px;
+    padding: 14px;
     border: 2px solid $blue;
     border-radius: 8px;
     counter-increment: steps;
@@ -68,6 +68,7 @@
 
     @include desktop(){
         @include desktop-h3;
+        margin-bottom: 8px;
     }
 }
 
