--- a/src/scss/layout/prices.scss
+++ b/src/scss/layout/prices.scss
@@ -51,6 +51,7 @@
     border: 1px solid $brand-button;
     width: 100%;
     text-align: center;
+    transition: 0.6s;
 
     &:hover {
         background-color: $button-additional-hover;
