--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -1,5 +1,5 @@
 :root {
-    --brand-button: #014A97;
+    --color-main-brand: #014A97;
     --brand-bg: #000B4C;
 }
 
@@ -26,6 +26,10 @@ body {
     &--colored {
         color: $white;
     }
+}
+
+.hidden {
+    display: none !important;
 }
 
 .visually-hidden {
