--- a/src/scss/layout/callback.scss
+++ b/src/scss/layout/callback.scss
@@ -21,7 +21,8 @@
     margin-bottom: 32px;
 
     @include desktop() {
-        width: 552px;
+        width: 584px;
+        flex-shrink: 0;
         margin-bottom: 0;
     }
 }
@@ -148,6 +149,7 @@
     border: none;
     margin: 8px auto 0;
     max-width: 343px;
+    transition: 0.6s;
 
     &:hover {
         background-color: $button-default-hover;
