--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -13,6 +13,10 @@
     justify-content: space-between;
     padding: 8px 16px;
     position: relative;
+
+    @include desktop() {
+        padding: 16px;
+    }
 }
 
 .header__logo {
@@ -29,7 +33,7 @@
         right: 0;
         top: 0;
         width: 315px;
-        height: 190px;
+        max-height: 100vh;
         overflow-y: auto;
         padding: 16px 16px 32px;
         z-index: 1;
