--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -81,9 +81,14 @@
     border-radius: 8px;
     background-color: $white;
     border: 1px solid $brand-button;
+    transition: 0.6s;
 
     @include desktop() {
         font-size: 18px;
+    }
+
+    &:hover {
+        background-color: $button-additional-hover;
     }
 
     & + & {
