--- a/src/scss/layout/steps.scss
+++ b/src/scss/layout/steps.scss
@@ -38,6 +38,7 @@
     border: 2px solid $blue;
     border-radius: 8px;
     counter-increment: steps;
+    transition: 0.6s;
 
     &:hover {
         background-color: $blue;
@@ -116,6 +117,7 @@
     width: 100%;
     margin-top: 16px;
     text-align: center;
+    transition: 0.6s;
 
     &:hover {
         background-color: $button-default-hover;
