--- a/src/scss/layout/whywe.scss
+++ b/src/scss/layout/whywe.scss
@@ -20,6 +20,7 @@
     padding: 16px;
     border: 2px solid $blue;
     border-radius: 8px;
+    transition: 0.6s;
 
     &:hover {
         background-color: $blue;
